Fixed style on media query and aligned form
I aligned the form in the mobile media query so it would align much better then it did before. I also fixed the style of the iPad media query by adjusting the submit button, and adding spacing so it can occupy all the white space.

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ form{
   border-radius: 25px;
   font-family: monospace;
   display: block;
-  padding-left: 60px;
+  padding-left: 35px;
   padding-bottom: 5px;
   padding-top: 5px;
 }
@@ -95,6 +95,7 @@ input[type="submit"]:hover{
   }
   input[type="submit"] {
     font-size: 25px;
+    margin-top: 30px;
     width: 20em;
   }
 }
